<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/detail" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="My Sold Books"
            />
    <item android:title="About Us">
        <menu>
        <item
            android:id="@+id/aboutapp"
            android:icon="@drawable/ic_baseline_phone_android_241"
            android:title="about app"
            />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_group_work_24"
            android:title="@string/coreteam" />
        </menu>
    </item>
    </group>
</menu>