<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#3aa8c1"
    android:padding="30dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Books4AllName"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="60dp" />
    <TextView
        android:id="@+id/verifiytext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Verification mail has been sent to your gmail account \n Please verify and login again"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="#00FF00"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/verifymessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mailResiver"
        android:textSize="15sp"
        android:textColor="#fff"
        android:layout_marginEnd="5dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/verifiybuttonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VerifiyAgain"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#c02739"
        android:background="@drawable/verifyshap"
        android:visibility="gone"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="25dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_marginTop="30dp"
                    android:text="@string/LogInHead"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/loginemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_shap"
                    android:drawableEnd="@drawable/ic_baseline_email_24"
                    android:ems="10"
                    android:hint="@string/Emaillogin"
                    android:paddingBottom="7dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/cardview_dark_background"
                    android:textColorHint="@color/black"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/loginpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Passwordlogin"
                    android:background="@drawable/edittext_shap"
                    android:paddingBottom="7dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_marginTop="60dp"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:autofillHints="" />

                <ImageView
                    android:id="@+id/loginbutton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/login"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
        </ScrollView>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="170dp"
            android:visibility="gone"
            android:id="@+id/proBarLogin"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/logintosignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/Createnewaccount" />
        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Forgot Password"
            android:textAlignment="center"
            android:textColor="#fff"/>

    </LinearLayout>

</LinearLayout>