<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3aa8c1"
    tools:context=".sellPage">




    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="20dp">

                <ProgressBar
                    android:id="@+id/sellprogressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="360dp"
                    android:visibility="invisible"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/UplodeDetails"
                        android:textAlignment="center"
                        android:textColor="#3aa8c1"
                        android:textSize="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="#000"
                        android:textSize="2sp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center_horizontal"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/design_default_color_primary_dark"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/uploadImg"
                            android:gravity="center"
                            android:textColor="#fff"
                            android:textSize="25dp"/>
                    <ImageView
                        android:id="@+id/uploadBookImg"
                        android:layout_width="wrap_content"
                        android:layout_height="160dp"
                        android:layout_gravity="center"
                        android:src="@drawable/upload" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/uplodeBookname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_shap"
                        android:paddingBottom="3dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/bookname"
                        android:inputType="textPersonName" />
                    <EditText
                        android:id="@+id/uplodeAuthorname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:background="@drawable/edittext_shap"
                        android:paddingBottom="3dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/authorName"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/uplodeBooktype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:background="@drawable/edittext_shap"
                        android:paddingBottom="3dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/booktype"
                        android:inputType="textPersonName" />


                    <EditText
                        android:id="@+id/uploadRenting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:background="@drawable/edittext_shap"
                        android:paddingBottom="3dp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/black"
                        android:hint="@string/rentingprice"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/uploadSelling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:background="@drawable/edittext_shap"
                        android:paddingBottom="3dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:hint="@string/sellingprice" />

                    <EditText
                        android:id="@+id/uploadAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:layout_marginBottom="10dp"                        android:background="@drawable/edittext_shap"
                        android:paddingBottom="3dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:hint="@string/address" />

                    <EditText
                        android:id="@+id/uploadZipcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edittext_shap"
                        android:paddingBottom="3dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:hint="@string/zipcode" />

                    <Button
                        android:id="@+id/myuplodeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/uplode"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
</RelativeLayout>