<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.Profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@drawable/gradiant">

        <TextView
            android:id="@+id/headNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="#fff"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="-35dp"
            app:srcCompat="@drawable/man_icon"
            android:contentDescription="@string/todo" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/personal"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/personal_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/full_name"
                android:textColor="@color/cardview_dark_background"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/nameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:text=""
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/phone"
                android:textColor="@color/cardview_dark_background"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/phoneProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:text=""
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textColor="@color/cardview_dark_background"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/emailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:text=""
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/proBar1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="160dp"
            android:visibility="visible" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/deleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:text="Delete Account" />


</RelativeLayout>