<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="660dp"
    tools:context=".ui.Profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/gradiant">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/man_icon" />

        <TextView
            android:id="@+id/headNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-95dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="350dp"
        android:layout_height="360dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="230dp"
        android:layout_marginBottom="50dp"
        android:background="#3aa8c1"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/personal"
            android:textColor="@color/cardview_dark_background"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/personal_icon" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="70dp"
            android:text="@string/full_name"
            android:textSize="25dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/nameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="100dp"
            android:text=""
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="145dp"
            android:text="@string/phone"
            android:textSize="25dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/phoneProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="175dp"
            android:text=""
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="230dp"
            android:text="@string/email"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/emailProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="260dp"
            android:text=""
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="160dp"
            android:visibility="visible"
            android:id="@+id/proBar1"/>

    </androidx.cardview.widget.CardView>

</RelativeLayout>